--- a/app/src/main/res/layout/widget_multiple_item_advertise.xml
+++ b/app/src/main/res/layout/widget_multiple_item_advertise.xml
@@ -12,18 +12,17 @@
         android:id="@+id/ivAdListsImageUrl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="34dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="34dp"
         android:src="@drawable/label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tvAdListsImageUrl"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvAdListsImageUrl"
@@ -34,26 +33,24 @@
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
         android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/ivAdListsImageUrlSecond"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrl"
-        app:layout_constraintBottom_toTopOf="@id/ivAdListsImageUrlSecond"/>
+        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrl" />
 
     <ImageView
         android:id="@+id/ivAdListsImageUrlSecond"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="34dp"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="34dp"
         android:src="@drawable/label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAdListsImageUrl"
         app:layout_constraintBottom_toTopOf="@id/tvAdListsImageUrlSecond"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
-
+        app:layout_constraintTop_toBottomOf="@id/tvAdListsImageUrl" />
 
 
     <TextView
@@ -65,25 +62,24 @@
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
         android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/ivAdListsImageUrlThird"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrlSecond"
-        app:layout_constraintBottom_toTopOf="@id/ivAdListsImageUrlThird"/>
+        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrlSecond" />
 
     <ImageView
         android:id="@+id/ivAdListsImageUrlThird"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="34dp"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="34dp"
         android:src="@drawable/label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAdListsImageUrlSecond"
         app:layout_constraintBottom_toTopOf="@id/tvAdListsImageUrlSecond"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tvAdListsImageUrlSecond" />
 
     <TextView
         android:id="@+id/tvAdListsImageUrlThird"
@@ -94,25 +90,24 @@
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
         android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/ivAdListsImageUrlFour"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrlThird"
-        app:layout_constraintBottom_toTopOf="@id/ivAdListsImageUrlFour"/>
+        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrlThird" />
 
     <ImageView
         android:id="@+id/ivAdListsImageUrlFour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="34dp"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="34dp"
         android:src="@drawable/label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAdListsImageUrlThird"
         app:layout_constraintBottom_toTopOf="@id/tvAdListsImageUrlFour"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tvAdListsImageUrlThird" />
 
     <TextView
         android:id="@+id/tvAdListsImageUrlFour"
@@ -123,11 +118,9 @@
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrlFour"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-
+        app:layout_constraintTop_toBottomOf="@id/ivAdListsImageUrlFour" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
