--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -49,11 +49,11 @@
         android:background="@drawable/shape_recharge_commentlist_second"
         android:gravity="center"
         android:paddingLeft="5dp"
-        android:visibility="gone"
-        android:text="无货"
         android:paddingRight="5dp"
+        android:text="无货"
         android:textColor="#fff8f6"
         android:textSize="11sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/tvStockout"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -64,11 +64,11 @@
         android:layout_marginLeft="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:src="@drawable/label"
         android:visibility="gone"
+        android:src="@drawable/label"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListSecond"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvPriceDecimal" />
+        app:layout_constraintTop_toBottomOf="@id/tvCountDown" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListSecond"
@@ -129,8 +129,8 @@
         android:layout_marginTop="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:visibility="gone"
         android:src="@drawable/issue_fee"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/tvContentAreaListPicListDoubleIssueFee"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/ivContentAreaListPicListDoubleDrawALottery"
@@ -142,24 +142,23 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:visibility="gone"
         android:src="@drawable/draw_a_lottery"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/ivContentAreaListPicListDoubleIssueFee"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/ivContentAreaListPicListDoubleIssueFee"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/tvContentAreaListPicListDoubleIssueFee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
         android:layout_marginTop="7dp"
+        android:layout_marginBottom="11dp"
         android:text="领话费"
         android:textColor="#333333"
-        android:visibility="gone"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/ivContentAreaListPicListDoubleIssueFee"
         app:layout_constraintRight_toRightOf="@id/ivContentAreaListPicListDoubleIssueFee"
@@ -171,9 +170,9 @@
         android:layout_height="wrap_content"
         android:text="领话费"
         android:textColor="#333333"
-        android:visibility="gone"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvContentAreaListPicListDoubleIssueFee"
         app:layout_constraintLeft_toLeftOf="@id/ivContentAreaListPicListDoubleDrawALottery"
         app:layout_constraintRight_toRightOf="@id/ivContentAreaListPicListDoubleDrawALottery" />
@@ -184,6 +183,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="9dp"
+        android:layout_marginTop="10dp"
         android:textColor="#333333"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -261,7 +261,6 @@
                 android:paddingRight="5dp"
                 android:text="赠美团神券"
                 android:textColor="#5faef7"
-
                 android:textSize="11sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/tvSaleTipList"
@@ -299,10 +298,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="/月"
+        android:visibility="gone"
         android:textColor="#ea5858"
         android:textSize="12sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListFirst"
+        app:layout_constraintBottom_toTopOf="@id/clLocation"
         app:layout_constraintLeft_toRightOf="@id/tvPriceInteger"
         app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
 
@@ -316,5 +315,75 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvPriceDecimal"
         app:layout_constraintLeft_toRightOf="@id/tvPriceInteger" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/shape_recharge_location"
+        app:layout_constraintTop_toBottomOf="@id/tvPriceDecimal"
+        app:layout_constraintBottom_toTopOf="@id/tvCountDown"
+        app:layout_constraintLeft_toLeftOf="@id/tvMainTitleTitle">
+
+        <ImageView
+        android:id="@+id/ivLocationIcon"
+        android:layout_width="9dp"
+        android:layout_height="10dp"
+            android:visibility="gone"
+            android:src="@drawable/location"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvLocationTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="河北省 石家庄市"
+            android:textColor="#ea5858"
+            android:textSize="11sp"
+            android:layout_marginLeft="1dp"
+            android:visibility="gone"
+            android:gravity="left"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/ivLocationIcon"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tvCountDownBackground"
+        android:layout_width="43dp"
+        android:layout_height="17dp"
+        android:textColor="#999999"
+        android:textSize="11sp"
+        android:paddingRight="5dp"
+        android:visibility="gone"
+        android:paddingLeft="5dp"
+        android:background="@drawable/shape_recharge_count_down_background"
+        app:layout_constraintTop_toTopOf="@id/tvCountDown"
+        app:layout_constraintBottom_toBottomOf="@id/tvCountDown"
+        app:layout_constraintLeft_toLeftOf="@id/tvMainTitleTitle" />
+
+    <TextView
+        android:id="@+id/tvCountDown"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:textColor="#ea5858"
+        android:textSize="11sp"
+        android:paddingRight="5dp"
+        android:visibility="gone"
+        android:paddingLeft="5dp"
+        android:background="@drawable/shape_recharge_count_down"
+        android:text="距开始  20230904"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/clLocation"
+        app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListFirst"
+        app:layout_constraintLeft_toLeftOf="@id/tvMainTitleTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
