--- a/app/src/main/res/layout/widget_multiple_item_many_image.xml
+++ b/app/src/main/res/layout/widget_multiple_item_many_image.xml
@@ -12,64 +12,60 @@
         android:id="@+id/ivPicAreaImageUrl"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="34dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="34dp"
         android:src="@drawable/falls1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ivPicAreaImageUrl3"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/ivPicAreaImageUrl2"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivPicAreaImageUrl2"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
-        android:layout_marginTop="16dp"
         android:scaleType="fitXY"
-        android:layout_marginRight="20dp"
         android:src="@drawable/falls1"
         app:layout_constraintLeft_toRightOf="@id/ivPicAreaImageUrl"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivPicAreaImageUrl3"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="34dp"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="34dp"
         android:src="@drawable/falls1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl"
         app:layout_constraintBottom_toTopOf="@id/tvMainTitleTitle"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/ivPicAreaImageUrl4"
-        />
+        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
 
     <ImageView
         android:id="@+id/ivPicAreaImageUrl4"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginRight="20dp"
         android:src="@drawable/falls1"
         app:layout_constraintLeft_toRightOf="@id/ivPicAreaImageUrl3"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/ivPicAreaImageUrl3"
-        />
+        app:layout_constraintTop_toTopOf="@id/ivPicAreaImageUrl3" />
 
     <TextView
         android:id="@+id/tvMainTitleTitle"
@@ -81,9 +77,9 @@
         android:textColor="#333333"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tvSaleTipList"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl3"
-        app:layout_constraintBottom_toTopOf="@id/tvSaleTipList"/>
+        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl3" />
 
     <TextView
         android:id="@+id/tvSaleTipList"
@@ -92,14 +88,14 @@
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="12dp"
         android:layout_weight="1"
+        android:background="@drawable/shape_rectangle18"
         android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:visibility="gone"
-        android:background="@drawable/shape_rectangle18"
         android:text="赠新人礼包"
         android:textColor="#ea5858"
         android:textSize="11sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvMainTitleTitle" />
@@ -110,14 +106,14 @@
         android:layout_height="19dp"
         android:layout_marginLeft="5dp"
         android:layout_weight="1"
+        android:background="@drawable/shape_rectangle18"
         android:gravity="center"
         android:paddingLeft="5dp"
-        android:visibility="gone"
         android:paddingRight="5dp"
         android:text="赠美团神券"
-        android:background="@drawable/shape_rectangle18"
         android:textColor="#ea5858"
         android:textSize="11sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvSaleTipList"
         app:layout_constraintLeft_toRightOf="@id/tvSaleTipList" />
 
