--- a/app/src/main/res/layout/widget_multiple_item_many_image.xml
+++ b/app/src/main/res/layout/widget_multiple_item_many_image.xml
@@ -17,6 +17,7 @@
         android:layout_marginRight="34dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
+        android:visibility="gone"
         android:scaleType="fitXY"
         android:src="@drawable/falls1"
         app:layout_constraintBottom_toTopOf="@id/ivPicAreaImageUrl3"
@@ -32,6 +33,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
+        android:visibility="gone"
         android:scaleType="fitXY"
         android:src="@drawable/falls1"
         app:layout_constraintLeft_toRightOf="@id/ivPicAreaImageUrl"
@@ -45,6 +47,7 @@
         android:layout_marginLeft="17dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="34dp"
+        android:visibility="gone"
         android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
@@ -58,6 +61,7 @@
         android:id="@+id/ivPicAreaImageUrl4"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:visibility="gone"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
@@ -75,6 +79,7 @@
         android:layout_marginBottom="9dp"
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
+        android:visibility="gone"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tvSaleTipList"
