--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -68,7 +68,7 @@
         android:src="@drawable/label"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListSecond"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvCountDown" />
+        app:layout_constraintTop_toBottomOf="@id/tvNumText" />
 
     <ImageView
         android:id="@+id/ivContentAreaListPicListSecond"
@@ -125,7 +125,6 @@
         android:id="@+id/ivContentAreaListPicListDoubleIssueFee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="11dp"
         android:layout_marginTop="11dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
@@ -159,7 +158,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvMainNullTitle"
         app:layout_constraintLeft_toLeftOf="@id/ivContentAreaListPicListDoubleIssueFee"
         app:layout_constraintRight_toRightOf="@id/ivContentAreaListPicListDoubleIssueFee"
         app:layout_constraintTop_toBottomOf="@id/ivContentAreaListPicListDoubleIssueFee" />
@@ -176,6 +175,95 @@
         app:layout_constraintBottom_toBottomOf="@id/tvContentAreaListPicListDoubleIssueFee"
         app:layout_constraintLeft_toLeftOf="@id/ivContentAreaListPicListDoubleDrawALottery"
         app:layout_constraintRight_toRightOf="@id/ivContentAreaListPicListDoubleDrawALottery" />
+
+    <TextView
+        android:id="@+id/tvMainNullTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="12dp"
+        android:gravity="left"
+        android:visibility="gone"
+        android:text="您还想看哪方面？"
+        android:textColor="#333333"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/tvNullTitleFirst"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvContentAreaListPicListDoubleIssueFee"/>
+
+
+    <TextView
+        android:id="@+id/tvNullTitleFirst"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/shape_recharge_null"
+        android:gravity="center"
+        android:text="签到得金豆"
+        android:visibility="gone"
+        android:textColor="#0e8cff"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/tvNullTitleSecond"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvMainNullTitle" />
+
+
+    <TextView
+        android:id="@+id/tvNullTitleSecond"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/shape_recharge_null"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="附近客户经理"
+        android:textColor="#0e8cff"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/tvNullTitleThird"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvNullTitleFirst" />
+
+
+    <TextView
+        android:id="@+id/tvNullTitleThird"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/shape_recharge_null"
+        android:gravity="center"
+        android:text="话费查询"
+        android:visibility="gone"
+        android:textColor="#0e8cff"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/tvNullTitleFour"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvNullTitleSecond" />
+
+
+    <TextView
+        android:id="@+id/tvNullTitleFour"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/shape_recharge_null"
+        android:gravity="center"
+        android:text="流量查询"
+        android:visibility="gone"
+        android:textColor="#0e8cff"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvNullTitleThird" />
 
     <TextView
         android:id="@+id/tvMainTitleTitle"
@@ -212,6 +300,18 @@
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/tvSaleTipListImageUrl"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:layout_marginRight="5dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/tvSaleTipList"
+                app:layout_constraintTop_toTopOf="parent" />
             <!-- 在这里添加您希望横向滑动的内容 -->
             <TextView
                 android:id="@+id/tvSaleTipList"
@@ -221,13 +321,13 @@
                 android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:gravity="center"
                 android:paddingLeft="5dp"
+                android:visibility="gone"
                 android:paddingRight="5dp"
                 android:text="赠新人礼包"
                 android:textColor="#5faef7"
                 android:textSize="11sp"
-                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tvSaleTipListImageUrl"
                 app:layout_constraintRight_toLeftOf="@id/tvSaleTipListSecond"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -239,13 +339,14 @@
                 android:layout_weight="1"
                 android:background="@drawable/shape_tvsaletiplist_rextangle"
                 android:gravity="center"
+                android:visibility="gone"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="赠美团神券"
                 android:textColor="#5faef7"
                 android:textSize="11sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@id/tvSaleTipList"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/tvSaleTipList"
                 app:layout_constraintRight_toLeftOf="@id/tvSaleTipListThird" />
 
@@ -270,7 +371,7 @@
     </HorizontalScrollView>
 
     <TextView
-        android:id="@+id/tvDollar"
+        android:id="@+id/tvIsShowPriceUnit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="￥"
@@ -290,7 +391,7 @@
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvPriceDecimal"
-        app:layout_constraintLeft_toRightOf="@id/tvDollar" />
+        app:layout_constraintLeft_toRightOf="@id/tvIsShowPriceUnit" />
 
     <TextView
         android:id="@+id/tvPriceDecimal"
@@ -343,13 +444,13 @@
         <TextView
             android:id="@+id/tvLocationTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="17dp"
             android:text="河北省 石家庄市"
             android:textColor="#ea5858"
             android:textSize="11sp"
             android:layout_marginLeft="1dp"
             android:visibility="gone"
-            android:gravity="left"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/ivLocationIcon"/>
@@ -378,11 +479,25 @@
         android:textSize="11sp"
         android:paddingRight="5dp"
         android:visibility="gone"
+        android:gravity="center"
         android:paddingLeft="5dp"
         android:background="@drawable/shape_recharge_count_down"
         android:text="距开始  20230904"
         android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@id/clLocation"
+        app:layout_constraintBottom_toTopOf="@id/tvNumText"
+        app:layout_constraintLeft_toLeftOf="@id/tvMainTitleTitle" />
+
+    <TextView
+        android:id="@+id/tvNumText"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:text="75.3万人观看"
+        android:textColor="#999999"
+        android:textSize="12sp"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tvCountDown"
         app:layout_constraintBottom_toTopOf="@id/ivContentAreaListPicListFirst"
         app:layout_constraintLeft_toLeftOf="@id/tvMainTitleTitle" />
 
