--- a/app/src/main/res/layout/widget_multiple_item_recharge.xml
+++ b/app/src/main/res/layout/widget_multiple_item_recharge.xml
@@ -20,23 +20,46 @@
         android:textColor="#333333"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/clTenDollar"
+        app:layout_constraintBottom_toTopOf="@id/ll"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/clTenDollar"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/et_phone"
+            android:text="19996801970"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/btn_select"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/beans"
+            />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clTenDollar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/shape_recharge_advertise"
         app:layout_constraintBottom_toTopOf="@id/clFiftyDollar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle">
+        app:layout_constraintTop_toBottomOf="@id/ll">
 
         <TextView
             android:id="@+id/tvMainTitleTenDollar"
