--- a/app/src/main/res/layout/widget_multiple_item_many_image.xml
+++ b/app/src/main/res/layout/widget_multiple_item_many_image.xml
@@ -18,6 +18,7 @@
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
+        android:visibility="gone"
         android:src="@drawable/falls1"
         app:layout_constraintBottom_toTopOf="@id/ivPicAreaImageUrl3"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +48,6 @@
         android:layout_marginTop="30dp"
         android:layout_marginRight="34dp"
         android:visibility="gone"
-        android:layout_marginBottom="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:src="@drawable/falls1"
@@ -62,7 +62,6 @@
         android:layout_height="50dp"
         android:visibility="gone"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:src="@drawable/falls1"
@@ -76,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="9dp"
+        android:layout_marginTop="10dp"
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
         android:visibility="gone"
